--- a/fithub-frontend/package.json
+++ b/fithub-frontend/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^11.0.1",
     "jest": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
